@@ -47,6 +47,7 @@ examples/nsh
   ifconfig   CONFIG_NET && CONFIG_NSOCKET_DESCRIPTORS > 0
   ls         CONFIG_NFILE_DESCRIPTORS > 0
   mb,mh,mw   ---
+  mem        ---
   mkdir      !CONFIG_DISABLE_MOUNTPOINT && CONFIG_NFILE_DESCRIPTORS > 0
   mkfatfs    !CONFIG_DISABLE_MOUNTPOINT && CONFIG_NFILE_DESCRIPTORS > 0 && CONFIG_FS_FAT
   mkfifo     !CONFIG_DISABLE_MOUNTPOINT && CONFIG_NFILE_DESCRIPTORS > 0
