@@ -423,6 +423,7 @@
 	* NSH: Add cd and pwd commands and current working directory to all NSH
 	  commands that refer to paths.
 	* Fix errors and warnings introduced into Linux sim build because of recent
-	  Cygwin-related changes
+	  Cygwin-based sim changes
+	* NSH: Add mem command to display heap usage
 
 
